Use directly to list method
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>